--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
-<div class="container">
-  <h3>Signup</h3>
-  <form action="#">
-    <div class="field email-field">
-      <div class="input-field">
-        <input type="email" placeholder="Enter your email" class="email" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up Form</title>
+    <link rel="stylesheet" href="STYLE.CSS"/>
+</head>
+<body>
+    <div class="container">
+        <h3>Signup</h3>
+        <form action="#">
+          <div class="field email-field">
+            <div class="input-field">
+              <input type="email" placeholder="Enter your email" class="email" />
+            </div>
+            <span class="error email-error">
+              <i class="bx bx-error-circle error-icon"></i>
+              <p class="error-text">Please enter a valid email</p>
+            </span>
+          </div>
+          <div class="field create-password">
+            <div class="input-field">
+              <input type="password" placeholder="Create Password" class="password" />
+              <i class="bx bx-hide password-hide"></i>
+            </div>
+            <span class="error password-error">
+              <i class="bx bx-error-circle error-icon"></i>
+              <p class="error-text">
+                Please enter at least 8 character with number, symbol, small and
+                capital letter.
+              </p>
+            </span>
+          </div>
+          <div class="field confirm-password">
+            <div class="input-field">
+              <input type="password" placeholder="Confirm password" class="confirpassword" />
+              <i class="bx bx-hide password-hide"></i>
+            </div>
+            <span class="error confirm-error">
+              <i class="bx bx-error-circle error-icon"></i>
+              <p class="error-text">Password don't match.</p>
+            </span>
+          </div>
+          <div class="field button-field input-field">
+            <input type="submit" value="Submit Now" />
+          </div>
+        </form>
       </div>
-      <span class="error email-error">
-        <i class="bx bx-error-circle error-icon"></i>
-        <p class="error-text">Please enter a valid email</p>
-      </span>
-    </div>
-    <div class="field create-password">
-      <div class="input-field">
-        <input type="password" placeholder="Create Password" class="password" />
-        <i class="bx bx-hide password-hide"></i>
-      </div>
-      <span class="error password-error">
-        <i class="bx bx-error-circle error-icon"></i>
-        <p class="error-text">
-          Please enter at least 8 character with number, symbol, small and
-          capital letter.
-        </p>
-      </span>
-    </div>
-    <div class="field confirm-password">
-      <div class="input-field">
-        <input type="password" placeholder="Confirm password" class="confirpassword" />
-        <i class="bx bx-hide password-hide"></i>
-      </div>
-      <span class="error confirm-error">
-        <i class="bx bx-error-circle error-icon"></i>
-        <p class="error-text">Password don't match.</p>
-      </span>
-    </div>
-    <div class="field button-field input-field">
-      <input type="submit" value="Submit Now" />
-    </div>
-  </form>
-</div>
+    <script src="app.js"></script>
+</body>
+</html>
+  
